# com.elfenlabs.text

./: .gitignore  .gitmodules  meson.build  package.json
Editor/: ElfenLabs.Text.Editor.asmdef  FontAsset.cs
Fontlib~/: android.cross  ios.cross  meson.build
Fontlib~/include/: api.h  atlas.h  base.h  buffer.h  context.h  error.h  font.h  glyph.h  graphics.h  log.h  math.h  mathematics.h  mathx.h  render.h  shape.h  texture.h  types.h
Fontlib~/src/: atlas.cpp  context.cpp  fontlib.cpp  shape.cpp  texture.cpp
Runtime/: Buffer.cs  Charset.cs  Components.cs  Elfenlabs.Text.asmdef  Font.cs  FontAsset.cs  FontAssetSystem.cs  FontPluginSystem.cs  Glyph.cs  HexField.cs  Library.cs  NativeBuffer.cs  TextMeshAuthoring.cs  TextRenderInitializationSystem.cs
Runtime/Font/: FontAssetAuthoring.cs  FontAssetAuthoringEditor.cs  FontAssetBakingSystem.cs  FontAssetData.cs  FontAssetReference.cs  FontAssetRuntimeData.cs  FontAssetSystem.cs  FontLibraryFunctions.cs  FontLibraryTypes.cs  FontMissingGlyphHandlingSystem.cs  FontPluginSystem.cs
Runtime/Layout/: Components.cs
Runtime/Shaders/: TextMTSDF.shader
Runtime/Text/: Components.cs  TextGlyphInitializationSystem.cs  TextLayoutAlignSystem.cs  TextLayoutTransformUpdateSystem.cs  TextLayoutUpdateSystem.cs  TextLayoutWrapSystem.cs  TextMeshAuthoring.cs  TextStringChangeSystem.cs
include/: fontlib.h
src/: fontlib.cpp
